--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-APP_ENV=
-APP_VERSION=
+APP_ENV=development
+APP_VERSION=0.1.0
 
-APP_NAME=
-APP_PORT=
+APP_NAME=go-authentication-exercise
+APP_PORT=8080
 
-DB_URL=
+DB_USER=postgres
+DB_PASSWORD=your_password
+DB_HOST=127.0.0.1:5432
+DB_NAME=go_auth_db
 
-JWT_SECRET_KEY=
+JWT_SECRET_KEY=your_secret_key_here
 
 QUERY_LIMIT_DEFAULT=10
